<resources>

    <string name="app_name">Checkbook</string>

    <string name="title_accounts">Accounts</string>
    <string name="title_recurring">Recurring</string>
    <string name="title_reports">Reports</string>
    <string name="title_backup">Backup</string>
    <string name="title_restore">Restore</string>
    <string name="title_settings">Settings</string>
    <string name="title_help">Help &amp; Support</string>
    <string name="title_about">About</string>
    <string name="title_add_account">Add Account</string>
    <string name="title_edit_account">Edit Account</string>
    <string name="title_add_transaction">Add Transaction</string>
    <string name="title_edit_transaction">Edit Transaction</string>
    <string name="title_add_transfer">Add Transfer</string>
    <string name="title_edit_transfer">Edit Transfer</string>
    <string name="title_activity_account">Account</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_edit_account">Edit Account</string>
    <string name="action_delete_account">Delete Account</string>
    <string name="action_delete">Delete</string>

    <string name="label_date_created">Date Created:</string>
    <string name="label_total_balance">Total Balance:</string>
    <string name="label_balance">Account Balance:</string>
    <string name="label_outstanding_balance">Outstanding Balance:</string>

    <string name="hint_account_name">Account Name</string>
    <string name="hint_account_balance">Starting Balance</string>
    <string name="hint_transaction_payee">Payee</string>
    <string name="hint_transaction_amount">Amount</string>

    <string name="str_starting_balance_text">$0.00</string>
    <string name="str_add_account_message">Press + to add account.</string>
    <string name="str_add_transaction_message">Press + to add transaction.</string>
    <string name="str_amount_input_format">%1$,.2f</string>
    <string name="str_confirm_account_deletion">Are you sure you want to delete this account?</string>
    <string name="str_error_deleting_account">Error deleting account.</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_press_back_to_exit">Press BACK once more to exit.</string>
    <string name="str_must_enter_account_name">Must enter account name.</string>

</resources>
