<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/layout_add_edit_account_coordinator"
    tools:context="com.brandon14.checkbook.AddEditAccount" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                layout="@layout/toolbar"
                android:id="@+id/toolbar"/>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:id="@+id/add_edit_account_container">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_account_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:id="@+id/edit_text_account_name"
                    android:hint="@string/hint_account_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.brandon14.checkbook.widgets.NonSelectableEditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:id="@+id/edit_text_account_balance"
                    android:textCursorDrawable="@drawable/handle"
                    android:textSelectHandleLeft="@drawable/handle"
                    android:textSelectHandleRight="@drawable/handle"
                    android:textSelectHandle="@drawable/handle"
                    android:longClickable="false"
                    android:hint="@string/hint_account_balance"
                    android:textIsSelectable="false"
                    android:contextClickable="false" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/label_date_created"
                    android:id="@+id/textview_label_date_created"
                    android:layout_marginTop="@dimen/label_top_margin" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_date_created_spinner"
                    android:layout_marginLeft="@dimen/margin_between_elements"
                    android:layout_marginStart="@dimen/margin_between_elements" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
