<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_account_activity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.brandon14.checkbook.fragments.AccountFragment">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/account_balance_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:id="@+id/layout_account_balance"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/total_balance_margin_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                    android:text="@string/label_outstanding_balance"
                    android:id="@+id/textview_label_outstanding_balance"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/total_balance_margin_horizontal"
                    android:layout_marginStart="@dimen/total_balance_margin_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                    android:id="@+id/text_view_outstanding_balance"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="@dimen/total_balance_margin_horizontal"
                    android:layout_marginEnd="@dimen/total_balance_margin_horizontal" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/total_balance_margin_vertical"
                android:layout_marginBottom="@dimen/total_balance_margin_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                    android:text="@string/label_balance"
                    android:id="@+id/textview_label_account_balance"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/total_balance_margin_horizontal"
                    android:layout_marginStart="@dimen/total_balance_margin_horizontal"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                    android:id="@+id/text_view_account_balance"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="@dimen/total_balance_margin_horizontal"
                    android:layout_marginEnd="@dimen/total_balance_margin_horizontal"
                    android:textColor="@color/white" />


            </RelativeLayout>
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/textview_add_transaction_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_add_transaction_message"
        android:visibility="gone"
        android:layout_gravity="center_horizontal|center_vertical" />

    <com.brandon14.checkbook.widgets.ContextMenuRecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_view_transactions"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        style="@style/RecyclerViewStyle" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_transactions"
        android:src="@drawable/bt_ic_add_white_24dp"
        app:elevation="@dimen/fab_margin"
        app:pressedTranslationZ="@dimen/fab_pressed_translation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@+id/recycler_view_transactions"
        app:layout_anchorGravity="bottom|right|end"
        app:layout_behavior="com.brandon14.checkbook.behaviors.FABScrollBehavior"/>

</android.support.design.widget.CoordinatorLayout>
