<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_account_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.brandon14.checkbook.AccountActivity"
    style="@style/AppTheme" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                layout="@layout/toolbar"
                android:id="@+id/toolbar"/>

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentBottom="true"
                android:background="@color/primary"
                android:id="@+id/layout_account_balance">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/total_balance_margin_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                        android:text="@string/label_outstanding_balance"
                        android:id="@+id/textview_label_outstanding_balance"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="@dimen/total_balance_margin_horizontal"
                        android:layout_marginStart="@dimen/total_balance_margin_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                        android:id="@+id/text_view_outstanding_balance"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="@dimen/total_balance_margin_horizontal"
                        android:layout_marginEnd="@dimen/total_balance_margin_horizontal" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/total_balance_margin_vertical"
                    android:layout_marginBottom="@dimen/total_balance_margin_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                        android:text="@string/label_balance"
                        android:id="@+id/textview_label_account_balance"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="@dimen/total_balance_margin_horizontal"
                        android:layout_marginStart="@dimen/total_balance_margin_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                        android:id="@+id/text_view_account_balance"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="@dimen/total_balance_margin_horizontal"
                        android:layout_marginEnd="@dimen/total_balance_margin_horizontal" />


                </RelativeLayout>
            </LinearLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/list_view_account_transactions"
                android:choiceMode="singleChoice"
                android:layout_centerHorizontal="true"
                android:layout_above="@id/layout_account_balance"
                style="@style/Widget.AppCompat.Light.ListView.DropDown" />

            <TextView
                android:id="@+id/textview_add_transaction_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str_add_transaction_message"
                android:visibility="gone"
                android:layout_centerInParent="true" />


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_add_transactions"
                android:src="@drawable/bt_ic_add_white_24dp"
                app:elevation="5dp"
                app:pressedTranslationZ="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_above="@id/layout_account_balance" />
        </RelativeLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
